prevent horizontal scroll on ios

--- a/src/sass/app_2/_common/drawer.scss
+++ b/src/sass/app_2/_common/drawer.scss
@@ -1,8 +1,4 @@
 /* stylelint-disable color-no-hex */
-body.no-scroll {
-    overflow: hidden;
-}
-
 .drawer-container {
     display: block;
 
