--- a/src/sass/app_2/_common/layouts.scss
+++ b/src/sass/app_2/_common/layouts.scss
@@ -107,6 +107,14 @@
 }
 
 // Helpers
+.no-scroll {
+    overflow: hidden;
+}
+
+.no-horizontal-scroll {
+    overflow-x: hidden;
+}
+
 .desktop-only {
     @media (max-width: 768px) {
         display: none;
